remove un-used file and adjust format in docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  sample-cs-api:
+  server:
     build: "./"
     image: "sample-cs-api-image"
     ports:
-    - "5002:5002"
+      - "5002:5002"
